Refined Spark-Parquet-KDF example: removed unused imports, improved README formatting, updated image reference, and added SparkSession configuration for Hadoop-free setup with Arrow support.